--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "test": "node index"
   },
   "dependencies": {
-    "msnodesqlv8": "file:../../v8/node_modules/msnodesqlv8/msnodesqlv8-5.0.0.tgz"
+    "msnodesqlv8": "^5.1.0"
   }
 }
